# python-project-template

./: .pre-commit-config.yaml  pyproject.toml  test-requirements.txt
.github/workflows/: build.yaml
